--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,4 +1,5 @@
 $small: max-width 799px;
+$xsmall: max-width 599px;
 $link: #00BCD4;
 $font-h: 'Exo 2', sans-serif;
 $box-width: 960px;
